Atualização na dashboard

--- a/grupo/Sites/login.html
+++ b/grupo/Sites/login.html
@@ -54,8 +54,8 @@
         var email = ipt_email.value
         var senha = ipt_senha.value
         var msg = ''
-        var emailFixo = 'matheus@gmail.com'
-        var senhaFixo = '123'
+        var emailFixo = 'troustsolution@empresa.com'
+        var senhaFixo = '#Sprint2'
         if(email == '' || senha == ''){
             msg = 'Preencha todos os campos'
         }else if(email != emailFixo || senha != senhaFixo){
@@ -69,7 +69,7 @@
     }
 
     function login() {
-        window.location.href = './dashboard/index.html'
+        window.location.href = './Dash/dashborad.html'
     }
 
 </script>
