--- a/grupo/Sites/Dash/dashborad.html
+++ b/grupo/Sites/Dash/dashborad.html
@@ -5,22 +5,70 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Dashboard</title>
+  <link rel="icon" type="image/x-icon" href="../src/Logo-icon.png">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Chewy&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+    * {
+      font-family: "Poppins";
+    }
+
+    body {
+      font-family: "Poppins";
+    }
+  </style>
 </head>
 
 <body>
   <div class="div-pai">
+    <!-- Menu Lateral -->
     <div class="container-lateral">
-      <p>A</p>
+      <div class="menu-lateral">
+        <div class="topo">
+          <div class="logo">
+            <img src="../src/Logo-icon.png" alt="TroustSolutions">
+            <h2><span>Troust</span>Solutions</h2>
+          </div>
+          <div class="links links-ativo">
+            <a href="./dashborad.html">Home</a>
+          </div>
+          <div class="links">
+            <a href="./dash-tanque.html">Tanque</a>
+          </div>
+          <div class="links">
+            <a href="./dashborad.html">Funcionario</a>
+          </div>
+        </div>
+        <div class="sair links">
+          <a href="../index.html">
+            <img src="../src/icon-desconectar.png" alt="Icon">
+            Desconectar
+          </a>
+        </div>
+      </div>
     </div>
+
+    <!-- Infos Nav -->
     <div class="container-principal">
       <nav>
-        <p>Dashboard</p>
-        <span>TroustSolutions</span>
+        <div class="empresa">
+          <p>Dashboard</p>
+          <span>TroustSolutions</span>
+        </div>
+        <div class="funcionario">
+          <div>
+            <p>Bem Vindo</p>
+            <p>Convidado</p>
+          </div>
+          <div>
+            <img src="../src/icon-perfil.png" alt="Foto">
+          </div>
+        </div>
       </nav>
 
-      <div class="container container1">
 
+      <div class="container container1">
         <div class="kpis-container">
           <div class="select">
             <select id="select_tanque" onclick="mudarTanque()">
@@ -73,6 +121,7 @@
 </html>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 
 <script>
   const grafico1 = document.getElementById('grafico1');
