mudanças basicas no site

--- a/grupo/Sites/cadastro.html
+++ b/grupo/Sites/cadastro.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="linha-input">
                     <label class="w-100">
-                        <span>Confitme sua Senha:</span>
+                        <span>Confirme sua Senha:</span>
                         <input type="password" id="ipt_confirme_senha" placeholder="">
                     </label>
                 </div>
@@ -316,11 +316,11 @@
             // cad_2.style.display = 'flex';
 
         } else if (cnpjEmpresa.length != 14) {
-            msg = 'CNPJ invalido'
+            msg = 'CNPJ inválido'
         } else if (tellCellEmpresa.length != 11 || tellFixoEmpresa.length != 10) {
             msg = 'Telefones invalidos'
         } else if (cepEmpresa.length != 8) {
-            msg = 'CEP invalido'
+            msg = 'CEP inválido'
         } else {
             cad_1.style.display = 'none';
             cad_2.style.display = 'flex';
