--- a/grupo/Sites/index.html
+++ b/grupo/Sites/index.html
@@ -67,11 +67,12 @@
         </div>
         <div class="banner-escrita">
             <h1>Troust<span>Solution</span></h1>
-            <h2>Somos uma equipe de desenvolvimento, para auxiliar os <br>truticultores a terem uma receita maior:</h2>
+            <h2>Somos uma equipe de desenvolvimento, para auxiliar os <br>truticultores a terem uma receita maior</h2>
             <button class="botao-saíba">
-                saiba mais
+                <a href="../Simulador Financeiro/calculadoraV1.html">Faça sua simulação</a>
                 <img height="10px"
                     src="https://static.vecteezy.com/system/resources/thumbnails/045/546/602/small_2x/white-arrow-road-sign-colorful-transparent-png.png"></a>
+
             </button>
         </div>
 
