--- a/grupo/Sites/Dash/dashborad.html
+++ b/grupo/Sites/Dash/dashborad.html
@@ -36,8 +36,13 @@
           <div class="links">
             <a href="./dash-tanque.html">Tanque</a>
           </div>
-          <div class="links">
+          <!-- <div class="links">
             <a href="./dashborad.html">Funcionario</a>
+          </div> -->
+          <div class="alerta">
+              <h3>Alerta</h3>
+              <p>Tanque 2 - Setor X</p>
+              <p>Temperatura: 18.2°c</p>
           </div>
         </div>
         <div class="sair links">
@@ -47,6 +52,7 @@
           </a>
         </div>
       </div>
+      
     </div>
 
     <!-- Infos Nav -->
@@ -133,18 +139,18 @@
     data: {
       labels: ['12:00', '13:00', '14:00', '15:00', '16:00', '17:00'],
       datasets: [{
-        label: 'Maxima',
-        data: [80, 82, 80, 85, 80, 83],
-        borderWidth: 3
-      },
-      {
         label: 'Minima',
-        data: [30, 29, 28, 25, 22, 23],
+        data: [10, 10, 10, 10, 10, 10],
         borderWidth: 3
       },
       {
-        label: 'Ideal',
-        data: [10, 10, 10, 10, 10, 10],
+        label: 'Máxima',
+        data: [20, 20, 20, 20, 20, 20],
+        borderWidth: 3
+      },
+      {
+        label: 'Sensor',
+        data: [14, 12, 13, 15, 18, 15],
         borderWidth: 3
       }]
     },
