--- a/grupo/Sites/index.html
+++ b/grupo/Sites/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/x-icon" href="./src/Logo-icon.png">
     <title>TroustSolutions - index</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Chewy&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -269,7 +270,8 @@
 
                 <div class="coluna">
                     <p>
-                        Somos uma equipe de desenvolvimento que está aqui para auxiliar os truticultores a terem um maior resultado de suas
+                        Somos uma equipe de desenvolvimento que está aqui para auxiliar os truticultores a terem um
+                        maior resultado de suas
                         receitas, com uma menor taxa de mortalidade de suas trutas.
                     </p>
                 </div>
