--- a/grupo/Sites/cadastro.html
+++ b/grupo/Sites/cadastro.html
@@ -43,7 +43,7 @@
                 <div class="linha-input">
                     <label class="w-60">
                         <span>Nome Fantasia:</span>
-                        <input type="text" id="ipt_nome_fantasia" placeholder="Ex: TroustSolutions">
+                        <input type="text" id="ipt_nome_fantasia" value="Truta Feliz" placeholder="Ex: TroustSolutions">
                     </label>
                     <label class="w-40">
                         <span>CNPJ:</span>
@@ -54,7 +54,7 @@
                 <div class="linha-input">
                     <label class="w-100">
                         <span>Razão Social:</span>
-                        <input type="text" id="ipt_razao_social"
+                        <input type="text" value="Trutas Feliz Ltda" id="ipt_razao_social"
                             placeholder="Troust Solutions Desenvolvimento e Inovação Ltda">
                     </label>
                 </div>
@@ -65,7 +65,7 @@
                     </label>
                     <label class="w-50">
                         <span>Telefone Celular:</span>
-                        <input id="ipt_telefone_2" placeholder="(11) 98255-1524" maxlength="15" onkeyup="formatarTellCell()">
+                        <input id="ipt_telefone_2" placeholder="(11) 98255-1524" value="(11) 98255-1524" maxlength="15" onkeyup="formatarTellCell()">
                     </label>
                 </div>
                 <div class="linha-input">
@@ -75,21 +75,21 @@
                     </label>
                     <label class="w-33">
                         <span>Número:</span>
-                        <input type="text" id="ipt_numero_ende" placeholder="598A">
+                        <input type="text" id="ipt_numero_ende" value="2" placeholder="598A">
                     </label>
                     <label class="w-33">
                         <span>Complemento:</span>
-                        <input type="text" id="ipt_complemento" placeholder="Apto. 1">
+                        <input type="text" id="ipt_complemento" value="Galpão 2" placeholder="Apto. 1">
                     </label>
                 </div>
                 <div class="linha-input">
                     <label class="w-50">
                         <span>Rua:</span>
-                        <input type="text" id="ipt_rua" placeholder="Rua Joaquim Alves Torres">
+                        <input type="text" id="ipt_rua" value="Rua Joaquim Alves Torres" placeholder="Rua Joaquim Alves Torres">
                     </label>
                     <label class="w-50">
                         <span>Bairro:</span>
-                        <input type="text" id="ipt_bairro" placeholder="Vila Nova Cachoeirinha">
+                        <input type="text" id="ipt_bairro" value="Vila Nova Cachoeirinha"  placeholder="Vila Nova Cachoeirinha">
                     </label>
                 </div>
             </div>
