--- a/grupo/Sites/public/index.html
+++ b/grupo/Sites/public/index.html
@@ -83,7 +83,7 @@
         <div class="caixas">
             <div class="primeira-parte">
                 <div class="caixa1">
-                    <img src="./src/imagens/agua.png" alt="agua">
+                    <img src="./scr/imagens/agua.png" alt="agua">
                     <h3>Decisão</h3>
                     <p>Se a temperatura
                         registrada pelo sensor ultrapassar a faixa
