Organização dos arquivos

--- a/grupo/Sites/Simulador Financeiro/calculadoraV1.html
+++ b/grupo/Sites/Simulador Financeiro/calculadoraV1.html
@@ -28,16 +28,16 @@
     <div class="links">
       <ul>
         <li class="agora">
-          <a href="../Sites/index.html">Home</a>
+          <a href="../public/index.html">Home</a>
         </li>
         <li>
-          <a href="../Sites/index.html">Nossa Missão</a>
+          <a href="../public/index.html">Nossa Missão</a>
         </li>
         <li>
-          <a href="../Sites/index.html">Relatos</a>
+          <a href="../public/index.html">Relatos</a>
         </li>
         <li>
-          <a href="../Sites/index.html">Contato</a>
+          <a href="../public/index.html">Contato</a>
         </li>
       </ul>
     </div>
@@ -226,11 +226,11 @@
     msg.innerHTML = mensagem;
   }
   function login() {
-    window.location.href = '../Sites/login.html'
+    window.location.href = '../public/login.html'
 
   }
   function cadastro() {
-    window.location.href = '../Sites/cadastro.html'
+    window.location.href = '../public/cadastro.html'
   }
 
   function comparar() {
